--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,4 +1,33 @@
+#配置启动端口以及项目名
 server:
   port: 8082
   servlet:
     context-path: /liuyu
+#配置数据库信息
+spring:
+  datasource:
+    url: jdbc:mysql://101.132.137.1:3306/myblog?useUnicode=true&characterEncoding=utf8&useSSL=false
+    username: root
+    password: liuyu123
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    type: com.alibaba.druid.pool.DruidDataSource
+    hikari:
+#      最小连接数
+      minimum-idle: 5
+#      最大连接数
+      maximum-pool-size: 15
+      connection-init-sql:
+#        连接时初始化执行的SQL
+        select 1 from hitokoto
+      connection-test-query:
+#        连接时测试执行的SQL
+        select 1 from hitokoto
+      connection-timeout: 240000
+mybatis-plus:
+  mapper-locations: classpath*:com/liuyu/mall/repository/mapper/*.xml
+  type-aliases-package: com.liuyu.mall.domain
+  global-config:
+    banner: false
+  configuration:
+#    控制台输出执行的SQL语句
+    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
