新增阿里fastjson依赖，明确三种查询方式，即xml配置的语句，使用构造器getOne（Service中的方法）以及Dao中的SelectById传入一个ID即可查询，控制器中请求返回的数据为JSON格式的数据。   --2019.12.10

--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,13 @@
             <artifactId>druid</artifactId>
             <version>1.1.12</version>
         </dependency>
+        <!-- 阿里的fastjson -->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.58</version>
+        </dependency>
+
         <!--MySQL驱动-->
         <dependency>
             <groupId>mysql</groupId>
