--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,9 +6,9 @@ server:
 #配置数据库信息
 spring:
   datasource:
-    url: jdbc:mysql://101.132.137.1:3306/myblog?useUnicode=true&characterEncoding=utf8&useSSL=false
+    url: jdbc:mysql://49.234.102.27:3306/myblog?useUnicode=true&characterEncoding=utf8&useSSL=false
     username: root
-    password: liuyu123
+    password: liuyu0113
     driver-class-name: com.mysql.cj.jdbc.Driver
     type: com.alibaba.druid.pool.DruidDataSource
     hikari:
@@ -23,6 +23,18 @@ spring:
 #        连接时测试执行的SQL
         select 1 from hitokoto
       connection-timeout: 240000
+  redis:
+    host: 49.234.102.27
+    database: 0
+    port: 6379
+    password: liuyu0113
+    jedis:
+      pool:
+        max-active: 16
+        min-idle: 0
+        max-idle: 16
+    client-name: mall
+    timeout: 5000
 mybatis-plus:
   mapper-locations: classpath*:com/liuyu/mall/repository/mapper/*.xml
   type-aliases-package: com.liuyu.mall.domain
@@ -31,3 +43,4 @@ mybatis-plus:
   configuration:
 #    控制台输出执行的SQL语句
     log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
+#Redis的配置
