整合Google的zxing包，添加工具类和帮助类生成二维码，添加类用于创建二维码。   --2019.12.13

--- a/pom.xml
+++ b/pom.xml
@@ -62,11 +62,27 @@
             <artifactId>mysql-connector-java</artifactId>
             <version>6.0.6</version>
         </dependency>
+        <!--用于Redis  -start-->
         <dependency>
             <groupId>org.springframework.integration</groupId>
             <artifactId>spring-integration-redis</artifactId>
             <version>2.2.1.RELEASE</version>
         </dependency>
+        <!--用于Redis  -end-->
+        <!--用于SpringSecurity  -start-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+            <version>2.2.1.RELEASE</version>
+        </dependency>
+        <!--用于SpringSecurity  -end-->
+        <!-- 用于Java生成二维码 -start -->
+        <dependency>
+            <groupId>com.google.zxing</groupId>
+            <artifactId>core</artifactId>
+            <version>3.3.3</version>
+        </dependency>
+        <!-- 用于Java生成二维码 -end -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-mail</artifactId>
