--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -29,14 +29,20 @@ spring:
       connection-timeout: 240000
   redis:
     host: 49.234.102.27
+    # Redis数据库索引（默认为0）
     database: 0
     port: 6379
     password: liuyu0113
     jedis:
       pool:
+        # 连接池最大连接数（使用负值表示没有限制）
         max-active: 16
+        # 连接池中的最小空闲连接
         min-idle: 0
+        # 连接池中的最大空闲连接
         max-idle: 16
+        # 连接池最大阻塞等待时间（使用负值表示没有限制）
+        max-wait: -1ms
     client-name: mall
     timeout: 5000
 mybatis-plus:
