--- a/pom.xml
+++ b/pom.xml
@@ -92,6 +92,19 @@
             <version>2.2.1.RELEASE</version>
         </dependency>
         <!--用于SpringSecurity  -end-->
+        <!--用于JWT  -start-->
+        <dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt</artifactId>
+            <version>0.9.1</version>
+        </dependency>
+        <!--用于JWT  -end-->
+        <!-- StringUtils工具类 -->
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.6</version>
+        </dependency>
         <!-- 用于Java生成二维码 -start -->
         <dependency>
             <groupId>com.google.zxing</groupId>
@@ -118,6 +131,12 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.platform</groupId>
+            <artifactId>junit-platform-commons</artifactId>
+            <version>RELEASE</version>
+            <scope>compile</scope>
         </dependency>
     </dependencies>
 
