--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,10 +1,14 @@
 #配置启动端口以及项目名
 server:
   port: 8082
-  servlet:
-    context-path: /liuyu
+#  servlet:
+#    context-path: /liuyu
 #配置数据库信息
 spring:
+  application:
+    name: mallApi
+  profiles:
+    active: dev
   security:
     user:
       name: liuyu
@@ -54,4 +58,42 @@ mybatis-plus:
   configuration:
 #    控制台输出执行的SQL语句
     log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
-#Redis的配置
+liuyu:
+  swagger:
+    title: 测试项目demo接口文档
+    description: 测试项目demo接口文档
+    version: 1.0.0
+    termsOfServiceUrl:
+    contactName:
+    contactUrl:
+    contactEmail:
+    license:
+    licenseUrl:
+  #安全认证
+  auth:
+    # token过期时间（分钟）
+    tokenExpireTime: 60
+    # 用户选择保存登录状态对应token过期时间（天）
+    saveLoginTime: 7
+    # 限制用户登陆错误次数（次）
+    loginTimeLimit: 10
+    # 错误超过次数后多少分钟后才能继续登录（分钟）
+    loginAfterTime: 10
+    ignoreUrls:
+      - /register
+      - /login
+      - /api/system/user/getCurrentUserInfo
+      - /index
+      - /logout
+      - /swagger-ui.html
+      #      - /swagger-resources/**
+      - /swagger-resources/configuration/ui
+      - /swagger-resources
+      - /v2/api-docs
+      - /swagger-resources/configuration/security
+      #      - /swagger/**
+      #      - /**/v2/api-docs
+      - /**/*.js
+      - /**/*.css
+      - /**/*.png
+      - /**/*.ico
