新增跨域配置，解决跨域问题。修改Controller中前后端分离接收参数方式-@RequestBody接收一个对象。   --2020.01.08

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -82,6 +82,7 @@ liuyu:
     ignoreUrls:
       - /register
       - /login
+      - /getUserName
       - /api/system/user/getCurrentUserInfo
       - /index
       - /logout
